--- a/03_Keeling_GWP/GWP_and_its_Discontents.Rnw
+++ b/03_Keeling_GWP/GWP_and_its_Discontents.Rnw
@@ -12,7 +12,126 @@
 
 Greenhouse gases (GHGs) warm the Earth by absorbing energy and slowing its escape to space, acting like an insulating blanket. Different GHGs vary in their impact on warming based on two key factors: their ability to absorb energy ("radiative efficiency") and their atmospheric lifetime.
 
+\section{History of GWP}
+
 Since 1990, the Intergovernmental Panel on Climate Change (IPCC) has used Global Warming Potential (GWP) to compare the warming impacts of different gases. GWP measures how much energy the emission of 1 ton of a gas will absorb over a specified time, relative to 1 ton of carbon dioxide (CO2). A higher GWP indicates a greater warming effect compared to CO2 over that period. The most common time horizon for GWP calculations is 100 years. This metric provides a standardized unit to aggregate emissions of various gases (e.g., for national GHG inventories) and evaluate emissions reduction strategies across sectors and gases.
+
+History of the Global Warming Potential (GWP) Metric by the IPCC
+The Global Warming Potential (GWP) metric was introduced in the early reports of the Intergovernmental Panel on Climate Change (IPCC) as a standardized way to compare the climate impact of different greenhouse gases (GHGs). Here's an overview of its development and evolution:
+
+\subsection{Origins and Introduction (1990 - First Assessment Report, FAR)}
+
+The Intergovernmental Panel on Climate Change was founded in 1988 to review the best research on climate change, evaluating both the risks and potential policy solutions. The First Assessment Report was released two years later.
+
+Surface temperature: The panel predicted in one scenario that, if 1990's levels of emissions remained constant, the mean global temperature would increase by an average of about 0.3 degrees C per decade. This would be a more rapid increase than the globe had experienced during the past 10,000 years and would result in a rise of 3 degrees C by the end of the 21st century.
+
+Purpose: The GWP metric was developed to provide policymakers with a simplified, comparable measure of the relative contributions of GHGs to global warming.
+Definition: GWP quantifies the cumulative radiative forcing a GHG causes over a specific time horizon, relative to CO₂.
+Initial Time Horizons: The IPCC initially proposed three time horizons: 20, 100, and 500 years, reflecting the immediate, intermediate, and long-term impacts of GHGs.
+
+Key Assumptions:
+Radiative efficiency (warming potential per molecule) is constant.
+Atmospheric decay follows exponential decay, assuming no feedbacks.
+Evolution in Subsequent Reports
+
+Feedbacks:Sea level rise: The report predicted that sea level would rise by 6 centimeters per decade over the next century under a "business as usual" scenario, in which greenhouse gas emissions were kept at 1990 levels. This rise would be caused mainly by thermal expansion of the ocean and the melting of some land ice. A 30- to 50-centimeter sea-level rise—which the panel said could happen by 2050 under the highest emission scenarios—would threaten low islands and coastal zones. A 1-meter rise by 2100 would have major ramifications, rendering some island countries uninhabitable, displacing tens of millions of people, threatening low-lying urban areas, flooding productive land, contaminating freshwater supplies, and seriously altering coastlines.
+
+IPCC notes: The projected changes in temperature and precipitation suggested to the IPCC that climatic zones could shift several hundred kilometers toward the poles over the next 50 years. Flora and fauna would lag behind, finding themselves in different environments, resulting in greater productivity for some species and population declines for others.
+
+The IPCC also included a note saying that, because response processes were poorly understood, as the climate warmed there could be an overall increase in natural greenhouse gas abundances, and that climate change outcomes would likely be more severe than what the report was predicting.
+
+Some initial considerations of feedback mechanisms were introduced but not fully incorporated.
+
+ The IPCC's broad conclusions have been remarkably consistent since the first report was published in 1990, although details have evolved.
+ 
+ 
+ 
+
+\subsection{Second Assessment Report (SAR, 1995)}
+
+Policy Impact: GWPs from the SAR became the basis for emissions equivalency calculations in the Kyoto Protocol (1997).
+
+
+Updates: Refinements were made based on improved understanding of atmospheric lifetimes and radiative efficiencies.
+
+Surface temperature: The Second Assessment Report (SAR), published in 1995, included adjusted estimates for the global temperature increase. The report projected an increase in global mean surface temperature of about 1 to 3.5 degrees C by 2100, with the midline estimate being a 2-degree rise. This was about a third lower than the midline projection published in the 1990 report. However, the IPCC noted, even if greenhouse gas concentrations were stabilized by the end of the century, the temperature would continue to increase.
+
+
+Sea level rise: The SAR was more conservative than earlier predictions in terms of sea level rise. Midrange models from the second report suggested that the sea level would rise by 50 cm by 2100, compared to 1995, less than the 1-meter threshold that had been predicted in 1990.
+
+Popular Mechanics notes: The SAR raised the question of increased spending on air conditioning and refrigeration as global temperatures climbed. The Environmental Protection Agency currently estimates that if America's climate were to warm by 1.8 degrees Fahrenheit, the energy demand for cooling would increase by 5 to 20 percent. These changes in energy consumption would likely require costly improvements and adjustments to the energy infrastructure. According to the EPA, a national temperature increase of 6.3 to 9 degrees Fahrenheit would require additional electric generating capacity of about 10 to 20 percent by 2050, costing hundreds of billions of dollars.
+
+\subsection{Third Assessment Report (TAR, 2001)}
+
+Scientific Advancements:
+Enhanced modeling of gas lifetimes and interactions in the atmosphere.
+Inclusion of carbon-cycle feedbacks for CO₂ was discussed but not yet fully integrated.
+Clarifications: Highlighted that the choice of time horizon influences GWP values, and the 100-year horizon remained the standard for international policy.
+
+
+Surface temperature: The Third Assessment Report's (TAR) predictions regarding global temperatures were for bigger increases than those foreseen in the second report. Summarizing all scenarios addressed in the TAR, the global mean temperature was expected to rise by 1.4 to 5.8 degrees C by 2100. The panel said that this change was due mainly to lower projected sulfur dioxide emissions. (Particulate matter in the atmosphere can block incoming solar radiation, leading to a cooling effect.)
+
+Sea level rise: The projected rise in sea level decreased from the 1995 report. Despite the higher projected temperature increase, the TAR predicted a rise of only 0.09 to 0.88 meters by 2100, primarily due to improvements in the climate models and a smaller predicted contribution from melting ice sheets and glaciers.
+
+Emissions: As carbon-dioxide emissions increased, the TAR said, the oceans and terrestrial ecosystems—which act as sinks, absorbing greenhouse gases—would not be able to keep up. More carbon dioxide would be left in the atmosphere, and by 2100 the IPCC's carbon cycle models projected atmospheric concentrations of CO2 between 540 and 970 parts per million, 90 to 250 percent above the preindustrial level of the year 1750.
+
+IPCC notes: The TAR included some bleak predictions about global warming's effect on human health. Regions where the transmission of malaria and dengue occur would spread past the 40 to 50 percent of the world they already affect. More frequent heat waves, along with increased humidity and urban air pollution would cause a spike in heat-related deaths and illnesses. More frequent flooding would result in additional health problems. These negative effects would be most severe in poorer countries.
+
+Popular Mechanics notes. According to the World Health Organization, malaria death rates have actually plummeted since 2000, decreasing by more than 25 percent globally due to improved prevention measures. Dengue fever, however, has become more prevalent, with 2.5 billion people currently living in regions at risk of infection.
+
+
+
+\subsection{Fourth Assessment Report (AR4, 2007)}
+Refinements: Updated GWP values based on new measurements of radiative efficiencies and lifetimes.
+Biogenic Methane: Addressed differences in methane’s GWP due to feedbacks (e.g., tropospheric ozone and stratospheric water vapor effects).
+
+Surface temperature: The projections for the rise in global temperature rose again in the Fourth Assessment Report (AR4). The range of temperature increase by end of the 21st century was 1.1 to 6.4 degrees C across all scenarios. Should the temperature increase more than 2.5 degrees C beyond the mean 1999 temperature of 15.6 degrees C, the IPCC said it had "medium confidence" that 20 to 30 percent of known animal and plant species would be at increased risk of extinction. If the global average temperature increase exceeded 3.5 degrees C, models suggested that there would be extinctions of 40 to 70 percent of known species.
+
+Sea level rise: The IPCC's panels continued to home in on a more accurate picture of projected sea level rise. The fourth report predicted a 0.18- to 0.59-meter increase across all scenarios by 2099, compared with the TAR predictions of 0.09 to 0.88 meters. In 2007, the IPCC didn't incorporate the effect of glacial dynamics, pending more research, so the estimate of sea-level rise was considered conservative. The report also estimated with "high confidence" that by mid-century, water availability would increase at high latitudes and decrease at mid latitudes and in the tropics.
+
+In some projections, Arctic late-summer sea ice disappeared almost entirely by the latter part of the 21st century. If global average warming were to continue for millennia at temperatures greater than 1.9 to 4.6 degrees C above preindustrial levels, the Greenland ice sheet would disappear almost entirely. This alone would eventually cause the sea level to rise by about 7 meters.
+
+Emissions: Global greenhouse gas emissions were likely to spike, the report predicted, rising 25 to 90 percent between 2000 and 2030.
+
+IPCC notes: The report predicted that world's oceans would become more acidic, with a reduction in ocean pH levels between 0.14 and 0.35 units during the 21st century. This was expected to have the greatest negative impact on shell-forming organisms, such as coral reefs, and their dependent species.
+
+The report also predicted that extreme weather events, such as droughts, floods, and cyclones would occur more frequently and with greater intensity, and that these could spur increased incidences of wildfires and salinization of irrigation water and other freshwater systems.
+
+\subsection{Fifth Assessment Report (AR5, 2013)}
+GWP Concept*: Introduced alternative metrics like GTP (Global Temperature Potential) for specific applications but retained GWP as the primary metric.
+Carbon-Cycle Feedbacks: Incorporated carbon-cycle feedbacks into CO₂-related metrics, increasing the accuracy of GWP values.
+Methane Updates: Refined methane’s GWP to 28–34 over 100 years, accounting for indirect effects and feedbacks.
+
+Surface temperature: The release of the IPCC's Fifth Assessment Report (AR5) on Friday gives us the most up-to-date look at research into climate change. According to the report, the temperature at the Earth's surface has warmed more in each of the past three decades than in any other 10-year span since 1850. This is true even though surface temperature warming has slowed in the past decade. The IPCC's Thomas Stocker said in a press release that global temperature increase by the end of the 21st century will likely exceed 2 degrees C, with the range of estimates running anywhere from 0.3 to 4.8 degrees C based on 2005 numbers. The IPCC reports with very high confidence that the Arctic region will continue to warm faster than the globe overall.
+
+Sea level rise: The current IPCC assessment predicts that sea-level rise will accelerate. The most modest projections in the AR5 have the sea level rising by 0.26 to 0.55 meters by 2100 above 1986 levels, with an estimated rise of 0.52 to 0.98 meters in the more extreme scenario. The IPCC predicts with "medium confidence" that, by the end of the 21st century, the globe's total volume of glaciers, excluding the ice caps, will decrease anywhere from 15 to 85 percent.
+
+Emissions: The 15 climate models the IPCC used for the AR5 projected widely divergent cumulative carbon-dioxide emissions from 2012 to 2100, ranging from 140 to 1910 gigatonnes.
+
+IPCC notes: Even if we were to halt our CO2 emissions immediately, this IPCC report states, many of the effects of continued carbon-dioxide emissions would be irreversible for hundreds or thousands of years. Depending on the scenario, it says, about 15 to 40 percent of emitted CO2 would remain in the atmosphere longer than 1000 years.
+
+
+\subsection{Sixth Assessment Report (AR6, 2021)}
+Improved Precision: Latest atmospheric chemistry models and empirical data provided the most precise GWP values to date.
+Dynamic Metrics: Introduced GWP* and other dynamic metrics as alternatives to better account for short-lived climate pollutants (e.g., methane).
+Policy Implications: Reaffirmed the 100-year time horizon as a standard, while encouraging flexibility for specific applications (e.g., prioritizing methane reductions in near-term climate policies).
+
+
+Key Developments Over Time
+Focus on Standardization: GWP has remained the most widely used metric for GHG comparisons due to its simplicity and compatibility with policy frameworks.
+
+
+Criticisms and Alternatives:
+Critics argue that GWPs oversimplify the complexities of GHG impacts, especially for short-lived gases like methane.
+Alternatives like GWP* and GTP aim to address these concerns but are less established in policy contexts.
+Scientific Advancements: Improvements in data, modeling, and understanding of feedbacks have progressively refined GWP values and interpretations.
+GWP in Policy
+Kyoto Protocol: GWPs from the SAR (1995) were enshrined in the Kyoto Protocol for calculating CO₂-equivalent emissions.
+Paris Agreement: GWPs from AR4 (2007) and AR5 (2013) have been used in national inventories and climate pledges under the Paris Agreement.
+
+The GWP metric, while not perfect, has been instrumental in shaping climate policy and scientific discourse. Its history reflects the interplay between advancing scientific understanding and the need for practical tools in global climate governance. As climate science and policy evolve, GWP will likely remain a foundational metric while newer approaches address its limitations.
+
+\section{Defining GWP}
 
 CO2 has a GWP of 1 by definition, regardless of the time horizon, as it serves as the reference gas. CO2 remains in the climate system for thousands of years, meaning its emissions cause long-lasting increases in atmospheric concentrations.
 
@@ -39,6 +158,39 @@ This standardized approach to measuring GHG impacts allows scientists and policy
 
 
 Formula for GWP
+<<>>=
+# Load necessary library
+library(dplyr)
+
+# Example dataset: emissions data for countries
+emissions_data <- data.frame(
+  Country = c("Country A", "Country B", "Country C"),
+  CO2_emissions = c(1000, 1500, 2000),   # in million metric tons
+  CH4_emissions = c(50, 40, 60),         # in million metric tons
+  N2O_emissions = c(30, 25, 35)          # in million metric tons
+)
+
+# Global Warming Potential (GWP) values for 100-year horizon
+GWP_CO2 <- 1
+GWP_CH4 <- 28
+GWP_N2O <- 265
+
+# Calculate GWP-weighted emissions for each gas
+emissions_data <- emissions_data %>%
+  mutate(
+    GWP_CO2 = CO2_emissions * GWP_CO2,
+    GWP_CH4 = CH4_emissions * GWP_CH4,
+    GWP_N2O = N2O_emissions * GWP_N2O,
+    Total_GWP = GWP_CO2 + GWP_CH4 + GWP_N2O
+  )
+
+# Print the results
+print(emissions_data)
+
+# Save the results to a CSV file
+write.csv(emissions_data, "emissions_gwp_calculations.csv", row.names = FALSE)
+
+@
 
 
 The GWP for a gas $i$ over a time horizon H is express as: 
@@ -58,7 +210,55 @@ The denominator compares these quantities for CO$_2$.
 Example GWPs
 CO$_2$: Defined as 1 (baseline),
 CH$_4$: ~28-34 over 100 years, ~84-86 over 20 years (depending on carbon-cycle feedbacks),
-N$_2$O: ~265-298 over 100 years.
+N$_2$O: ~265-298 over 100 years.\
+
+
+Example: 
+
+Step-by-Step Process
+Understand the GWP Equation The GWP for a gas i over a time horizon
+H is (See Equation 1).
+
+
+
+ : Radiative efficiency of gas 
+𝑖
+i (W/m² per unit concentration).
+
+ : Atmospheric lifetime of gas 
+
+ : Exponential decay of the gas concentration over time.
+𝐻
+H: Time horizon (e.g., 20, 100, or 500 years).
+Set Up Parameters
+
+Radiative efficiency and atmospheric lifetime for each gas.
+Choose a time horizon 
+𝐻
+H.
+Discretize the Time Horizon
+
+Use numerical integration (e.g., the trapezoidal rule) to approximate the integrals.
+
+Write the R Code
+
+
+Explanation of the Code
+Parameters:
+
+Radiative efficiencies and lifetimes are based on published IPCC values.
+
+A simplified effective lifetime is used for CO2 since it has multiple removal processes.
+Exponential Decay:
+
+Simulates the diminishing atmospheric concentration of each gas over time.
+Numerical Integration:
+
+The trapz function from the pracma library calculates the integral of radiative forcing over the time horizon.
+Calculate GWP:
+
+The ratio of the integrated radiative forcing of Ch4 to CO2 gives the GWP.
+
 
 Limitations of GWPs
 GWPs do not account for feedback mechanisms, such as those affecting CO$_2$ uptake by oceans and vegetation.
