--- a/04_Stock_and_Flow/stock and Flow.Rmd
+++ b/04_Stock_and_Flow/stock and Flow.Rmd
@@ -2,7 +2,9 @@
 title: "Stock and Flow"
 author: "Marc Los Huertos"
 date: "`r Sys.Date()`"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 ```{r setup, include=FALSE}
